<resources>
    <string name="app_name">WeatherAppThesis</string>

    <string name="welcome">Welcome</string>
    <string name="locations">Locations</string>

    <string name="location1">Location 1</string>
    <string name="location2">Location 2</string>
    <string name="location3">Location 3</string>
    <string name="location4">Location 4</string>
    <string name="location5">Location 5</string>
    <string name="location6">Location 6</string>

    <string name="forecast24">24h Forecast</string>

    <string name="messageEasy">This is a message which explains to the user, that the conditions are easy to kayak</string>
    <string name="messageModerate">This is a message which explains to the user, that the conditions are moderate to kayak</string>
    <string name="messageAdvanced">This is a message which explains to the user, that the conditions are advanced to kayak</string>
    <string name="messageExtreme">This is a message which explains to the user, that the conditions are extreme to kayak</string>


    <string name="empty">-</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="wind">Wind</string>
    <string name="current_day">Current Day</string>
    <string name="humitidy">Humitidy</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <!-- Strings used for Button  -->
    <string name="forcast">----></string>

</resources>
