<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/locations"/>

    <ProgressBar
        android:id="@+id/pb_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_locations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_location_3"
        app:layout_constraintEnd_toStartOf="@id/bt_location_2"
        android:text="@string/location1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_location_1"
        app:layout_constraintTop_toTopOf="@id/bt_location_1"
        android:text="@string/location2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_location_5"
        app:layout_constraintEnd_toStartOf="@id/bt_location_4"
        android:text="@string/location3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_location_3"
        app:layout_constraintTop_toTopOf="@id/bt_location_3"
        android:text="@string/location4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_location_6"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/location5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_location_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bt_location_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_location_5"
        android:text="@string/location6"/>

</androidx.constraintlayout.widget.ConstraintLayout>